# zephyr

./: .gitignore  Makefile  README.rst  compile  flash.sh  gitpush.py  make.sh
boards/arm/adafruit_feather_nrf52840_sense/: Kconfig  Kconfig.board  Kconfig.defconfig  adafruit_feather_nrf52840_sense.dts  adafruit_feather_nrf52840_sense.yaml  adafruit_feather_nrf52840_sense_defconfig  feather_connector.dtsi
drivers/audio/: dmic_nrfx_pdm.c
samples/bt_exp/: prj.conf
samples/hello_world/: prj.conf
samples/module_exp/: prj.conf
samples/pcm_writer/: prj.conf
samples/pdm/: prj.conf
samples/pdm_analyzer/: prj.conf
samples/rtenlab_project/Outer_Board_with_DS_sensors/: CMakeLists.txt  prj.conf
samples/rtenlab_project/Outer_Board_with_DS_sensors/src/: main.c  uart_i2c.c
samples/rtenlab_project/Outer_Board_with_DS_sensors/src/ds/: Dallas_temperature.h
samples/rtenlab_project/Outer_Board_with_DS_sensors/src/sht/: sht31.c
samples/rtenlab_project/ble_conn/: CMakeLists.txt  prj.conf
samples/rtenlab_project/ble_conn/src/: apds9960.c  lsm6ds33.c  main.c  sht31.h
samples/rtenlab_project/ble_conn/src/apds/: apds9960.c
samples/rtenlab_project/ble_conn/src/battery/: battery.c
samples/rtenlab_project/ble_conn/src/blinky/: blink.c
samples/rtenlab_project/ble_conn/src/bme680/: bme680.c  bme680.h
samples/rtenlab_project/ble_conn/src/bmp/: bmp280.c  bmp280.h
samples/rtenlab_project/ble_conn/src/ds/: Dallas_temperature.c  Onewire.c
samples/rtenlab_project/ble_conn/src/lsm/: lsm6ds33.c  lsm6ds33.h
samples/rtenlab_project/ble_conn/src/scd/: scd41.c
samples/rtenlab_project/upgraded_synchronization_dev_implementation/: CMakeLists.txt  prj.conf
samples/rtenlab_project/upgraded_synchronization_dev_implementation/src/: apds9960.c  apds9960.h  main.c  sht31.c  system_setup.c  system_setup.h
samples/rtenlab_project/upgraded_synchronization_dev_implementation/src/battery/: battery.c  battery.h
samples/wav_writer/: prj.conf
(+148 files in other folders)
